# tera-dl

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.qwen/: settings.json
.qwen/skills/auto-skill-textual-dual-pane-tui/: SKILL.md
tera/: auth.py  cli.py  client.py  config.py  downloader.py  formatter.py  tui.py  uploader.py
